# rs-chef-api

./: Cargo.toml
chef_api/: Cargo.toml
chef_api/src/: api_client.rs  errors.rs  lib.rs  macros.rs
chef_api/src/authentication/: auth11.rs  auth13.rs  mod.rs
examples/: simple.rs  simple2.rs
src/models/: mod.rs  node.rs  partial_result.rs
