[package]
name = "chef_api"
version = "0.2.0"
authors = ["Thom May <thom@may.lt>"]
readme = "README.md"
description = "Client for the Chef Server API"
repository = "https://github.com/chef/rs-chef-api"
license = "Apache-2.0"
edition = "2018"

[dependencies]
time = "0.3"
log = "0.4"

futures = "0.3"
tokio = { version = "1", features = [ "rt", "rt-multi-thread" ]}
hyper = { version = "0.14", features = [ "client", "http1" ]}
hyper-openssl = "0.9"

url = "2"
chrono = "0.4"
openssl = "0.10"
env_logger = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

failure = "0.1"

toml = "0.7"
dirs = "5"
hyper-tls = "0.5.0"
base64 = "0.21.0"
itertools = "0.10.5"
